--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@toruslabs/torus-embed": "^1.10.15",
+    "@types/web3": "^1.2.2",
+    "@walletconnect/web3-provider": "^1.4.1",
+    "authereum": "^0.1.14",
+    "bitski": "^0.11.0-beta.4",
     "core-js": "^3.6.5",
+    "fortmatic": "^2.2.1",
     "register-service-worker": "^1.7.1",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "web3": "^1.3.6",
+    "web3modal": "^1.9.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -22,6 +30,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "vue-cli-plugin-web3modal": "~1.1.0"
   }
 }
